stderr
JudgeMan.java:59: error: cannot find symbol
            for(int i = 1; i < hand.length; i++){
                               ^
  symbol:   variable hand
  location: class JudgeMan
1 error
